--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">MyInventory</string>
+    <string name="app_name">MyINVENTORY</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_title">MyINVENTORY</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
+    <string name="nav_header_desc">Navigation title</string>
     <string name="action_settings">Settings</string>
+    <string name="nav_box_title">Armoire</string>
+    <string name="nav_box_category_title">Armoires</string>
 </resources>
